[project]
name = "baidu-apollo-plot"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuqi Huai",email = "yhuai@uci.edu"},
    {name = "Geng Li",email = "gengli778@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cyber-record (>=0.1.12,<0.2.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
